<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_description_failed">Download failed</string>
    <string name="notification_button">Check the status</string>
    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Udacity Download</string>


    <string name="button_name">Click me</string>
    <string name="button_clicked">We are loading </string>
    <string name="button_loading">We are loading </string>
    <string name="button_completed">Download</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="toast_message">Please select the file to download</string>

    <string name="radio_group_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_group_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radio_group_Retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="title_file_name">File name:</string>
    <string name="status_title">Status:</string>
    <string name="target_url">Url:</string>
    <string name="ok_button">OK</string>

</resources>
